--- a/Hotel/Hotel.csproj
+++ b/Hotel/Hotel.csproj
@@ -32,4 +32,8 @@
     <Resource Include="View_layer\Images\vector6degradado.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View_layer\model\" />
+  </ItemGroup>
+
 </Project>
