--- a/Hotel/App.config
+++ b/Hotel/App.config
@@ -4,7 +4,7 @@
     <add key="Servidor" value="btr3itqyjgkpayqsmsfx-mysql.services.clever-cloud.com"/>
     <add key="Puerto" value="3306"/>
     <add key="Usuario" value="uurra9sjisnoi7br"/>
-    <add key="Password" value="8VviXT9zhB87DtwZSwFZ"/>
+    <add key="Password" value="fWH6qniK98EB3am5aHar"/>
     <add key="NombreDB" value="btr3itqyjgkpayqsmsfx"/>
   </appSettings>
 </configuration>
